0029746: Modeling Algoriothms - declare Boolean operation classes in BRepAlgo package as deprecated

The API classes in the package BRepAlgo providing access to old Boolean operations (Fuse, Common, Cut, Section) are marked as deprecated.
Corresponding classes from the package BRepAlgoAPI should be used instead.