src/BRepAlgo/BRepAlgo_Common.cxx
@@ -18,6 +18,8 @@
 #include <BRepAlgo_Common.hxx>
 #include <TopoDS_Shape.hxx>
 
+Standard_DISABLE_DEPRECATION_WARNINGS
+
 //=======================================================================
 //function : BRepAlgo_Common
 //purpose  : 
@@ -30,3 +32,5 @@ BRepAlgo_Common::BRepAlgo_Common(const TopoDS_Shape& S1,
   PerformDS();
   Perform(TopAbs_IN,TopAbs_IN);
 }
+
+Standard_ENABLE_DEPRECATION_WARNINGS
