src/BRepAlgo/BRepAlgo_Cut.hxx
@@ -31,7 +31,8 @@ class TopoDS_Shape;
 //! - defining the construction of a cut shape,
 //! - implementing the construction algorithm, and
 //! - consulting the result.
-class BRepAlgo_Cut  : public BRepAlgo_BooleanOperation
+class Standard_DEPRECATED("This class is deprecated - BRepAlgoAPI_Cut should be used instead")
+  BRepAlgo_Cut : public BRepAlgo_BooleanOperation
 {
 public:
 
