src/BRepTest/BRepTest_TopologyCommands.cxx
@@ -45,6 +45,8 @@
 #include <TopTools_IndexedMapOfShape.hxx>
 #include <TopExp.hxx>
 
+Standard_DISABLE_DEPRECATION_WARNINGS
+
 //=======================================================================
 // topop
 //=======================================================================
@@ -153,6 +155,8 @@ static Standard_Integer psection(Draw_Interpretor& , Standard_Integer n, const c
 
   return 0;
 }
+
+Standard_ENABLE_DEPRECATION_WARNINGS
 
 static Standard_Integer halfspace(Draw_Interpretor& di,
 				  Standard_Integer n, const char** a)
